# aws-sdk-rust

./: Cargo.toml
sdk/ec2/: Cargo.toml
sdk/ec2/src/: client.rs  error_meta.rs  lens.rs  operation.rs  protocol_serde.rs
sdk/ecs/: Cargo.toml
sdk/ecs/src/: client.rs  error_meta.rs  operation.rs  protocol_serde.rs
sdk/lambda/: Cargo.toml
sdk/lambda/src/: client.rs  error_meta.rs  operation.rs  protocol_serde.rs
sdk/s3/: Cargo.toml
sdk/s3/src/: client.rs  error_meta.rs  lens.rs  operation.rs  protocol_serde.rs
sdk/s3/src/operation/: delete_object.rs
sdk/s3/src/protocol_serde/: blah.txt  shape_grant.rs  shape_grantee.rs  shape_upload_part.rs
sdk/sqs/: Cargo.toml
